# aula06_bootcamp_python

./: .flake8  pyproject.toml
